--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
         "plugins": {
             "cordova-plugin-console": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "call-number": {}
         }
     },
     "dependencies": {
-        "cordova-android": "~6.2.3",
+        "call-number": "git+https://github.com/Rohfosho/CordovaCallNumberPlugin.git",
+        "cordova-android": "^6.2.3",
         "cordova-plugin-console": "~1.0.1",
         "cordova-plugin-statusbar": "~1.0.1",
         "cordova-plugin-whitelist": "~1.2.0"
