--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
             "cordova-plugin-console": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "call-number": {}
+            "call-number": {},
+            "cordova-plugin-geolocation": {}
         }
     },
     "dependencies": {
         "call-number": "git+https://github.com/Rohfosho/CordovaCallNumberPlugin.git",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "~1.0.1",
+        "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-statusbar": "~1.0.1",
         "cordova-plugin-whitelist": "~1.2.0"
     }
