removed extra tabs and updated call tab with framework 7 ui design components

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "displayName": "Tip Line",
     "cordova": {
         "platforms": [
-            "android"
+            "android",
+            "ios"
         ],
         "plugins": {
             "cordova-plugin-console": {},
@@ -16,6 +17,7 @@
     "dependencies": {
         "call-number": "git+https://github.com/Rohfosho/CordovaCallNumberPlugin.git",
         "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "~1.0.1",
         "cordova-plugin-statusbar": "~1.0.1",
         "cordova-plugin-whitelist": "~1.2.0"
