--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
             "cordova-plugin-geolocation": {}
         }
     },
-    "dependencies": {
-        "call-number": "git+https://github.com/Rohfosho/CordovaCallNumberPlugin.git",
-        "cordova-android": "^6.2.3",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "~1.0.1",
-        "cordova-plugin-geolocation": "^2.4.3",
-        "cordova-plugin-statusbar": "~1.0.1",
-        "cordova-plugin-whitelist": "~1.2.0"
-    }
+  "dependencies": {
+    "call-number": "git+https://github.com/Rohfosho/CordovaCallNumberPlugin.git",
+    "cordova-android": "^6.2.3",
+    "cordova-ios": "^4.4.0",
+    "cordova-plugin-compat": "^1.1.0",
+    "cordova-plugin-console": "~1.0.1",
+    "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-statusbar": "~1.0.1",
+    "cordova-plugin-whitelist": "~1.2.0",
+    "mongolab-data-api": "^1.1.6"
+  }
 }
